--- a/CanoCurtoCasualFem.html
+++ b/CanoCurtoCasualFem.html
@@ -79,7 +79,7 @@
 
 
                 <div class="Quadrado-da-meia-Casual-Branca-Rendada" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurtoCasual-BrancaRendada.png" alt=""></div>
+                    <div class="container" id="container"> <img src="img-feminino/MeiaCanoCurtoCasual-BrancaRendada.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Casual Cano Curto - Rendada Branca</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
@@ -173,13 +173,13 @@
                 ListradaPretaRosa: 'img-feminino/MeiaCanoCurtoCasualListrada-PretaRosa.png',
                 ListradaVerde: 'img-feminino/MeiaCanoCurtoCasualListrada-Verde.png'
             },
-            ' Quadrado-da-meia-Casual-DesenhadaCoracao-Branca':{
+            'Quadrado-da-meia-Casual-DesenhadaCoracao-Branca':{
                 DesenhoBrancoCoracao: 'img-feminino/MeiaCanoCurtoCasualDesenhada-BrancaCoracao.png',
                 DesenhoCinzaCoracao: 'img-feminino/MeiaCanoCurtoCasualDesenhada-CinzaCoracao.png'
             },
-            ' Quadrado-da-meia-Casual-Branca-Rendada':{
+            'Quadrado-da-meia-Casual-Branca-Rendada':{
                 BrancaRendada: 'img-feminino/MeiaCanoCurtoCasual-BrancaRendada.png',
-                RosaClaroCasual: 'img-feminino/MeiaCanoCurtoCasual-RosaRendada-Verde.png'
+                RosaClaroCasual: 'img-feminino/MeiaCanoCurtoCasual-RosaRendada.png'
             }
            
 
@@ -234,7 +234,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoFeminina/CanoCurtoCasual.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
