--- a/descricaoFeminina/CanoCurtoCasual.html
+++ b/descricaoFeminina/CanoCurtoCasual.html
@@ -59,10 +59,11 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p>Uma meia cano curto lisa é um tipo de perfil ou moldura que possui uma seção transversal
-                    semicircular, criando uma aparência suave e arredondada. É curta, indicando que sua extensão ou
-                    comprimento é limitado, e lisa, o que significa que não possui texturas ou detalhes adicionais em
-                    sua superfície.</p>
+                <p>As meias de cano curto "Casual" são a escolha ideal para quem busca conforto e praticidade no dia a
+                    dia. Confeccionadas com materiais de alta qualidade, elas oferecem um toque suave na pele e um
+                    ajuste perfeito que se mantém durante todo o uso. Com design discreto e versátil, essas meias são
+                    ideais para combinar com qualquer look casual, proporcionando o equilíbrio perfeito entre
+                    simplicidade e estilo.</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
