Termino do primeiro html baby

--- a/babyDesMasc.html
+++ b/babyDesMasc.html
@@ -146,55 +146,51 @@
                     </div>
                 </div>
 
-                <div class="parte2">
-                    <div class="todas-as-meias-baby-des-masc">
-                        <div class="Quadrado-da-meia-kit1-0a6 kit" id="div-meia">
-                            <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
+                <div class="Quadrado-da-meia-kit1-0a6" id="div-meia">
+                    <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
+                        <h3 class="numeracao">0 á 6 meses</h3>
+                        <div class="cores-kit-des-0a6">
+                            <div class="kit1Des0a6">
+                                <p>1</p>
                             </div>
-                            <div class="informacoes-meia">
-                                <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                                <h3 class="numeracao">0 á 6 meses</h3>
-                                <div class="cores-kit-des-0a6">
-                                    <div class="kit1Des0a6">
-                                        <p>1</p>
-                                    </div>
-                                    <div class="kit2Des0a6">
-                                        <p>2</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="preco-informacoes">
-                                <h3 class="preco">R$ 11,10</h3>
-                                <h3 class="texto-a-vista">Á Vista</h3>
-                                <button class="botao-euQuero">Eu Quero!</button>
-                            </div>
-                        </div>
-
-
-                        <div class="Quadrado-da-meia-kit1-6a12 kit" id="div-meia">
-                            <div class="container"> <img src="img-baby/kit1-desenhada6a12.png"
-                                    alt="Kit 3 pares de meia">
-                            </div>
-                            <div class="informacoes-meia">
-                                <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                                <h3 class="numeracao">6 á 12 meses</h3>
-                                <div class="cores-kit-des-0a6">
-                                    <div class="kit1Des6a12">
-                                        <p>1</p>
-                                    </div>
-                                    <div class="kit2Des6a12">
-                                        <p>2</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="preco-informacoes">
-                                <h3 class="preco">R$ 11,40</h3>
-                                <h3 class="texto-a-vista">Á Vista</h3>
-                                <button class="botao-euQuero">Eu Quero!</button>
+                            <div class="kit2Des0a6">
+                                <p>2</p>
                             </div>
                         </div>
                     </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 11,10</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
                 </div>
+
+
+                <div class="Quadrado-da-meia-kit1-6a12" id="div-meia">
+                    <div class="container"> <img src="img-baby/kit1-desenhada6a12.png" alt="Kit 3 pares de meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-kit-des-0a6">
+                            <div class="kit1Des6a12">
+                                <p>1</p>
+                            </div>
+                            <div class="kit2Des6a12">
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 11,40</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -236,8 +232,8 @@
                 <div class="institucional-rodape">
                     <p class="titulo-rodape">INSTITUCIONAL</p>
                     <div class="textoInst-rodape">
-                        <a href="rodape/representantes.html">
-                            <p class="texto2-rodape">Representantes</p>
+                        <a href="rodape/revendedor.html">
+                            <p class="texto2-rodape">Seja um Revendedor</p>
                         </a>
                         <a href="rodape/meios.html">
                             <p class="texto2-rodape">Meios de pagamento e de frete</p>
@@ -357,13 +353,11 @@
                 });
             });
 
-            // Evento para o botão "Eu Quero!" dentro do quadrado atual
             quadrado.querySelector('.botao-euQuero').addEventListener('click', () => {
                 const corSelecionada = selectedColor;
-                const isKit = quadrado.classList.contains('kit'); // Verifica se é um kit
 
-                if (isKit || corSelecionada) {
-                    window.location.href = `descricaoBaby/DescricaoBabyDesMasc.html?cor=${corSelecionada || 'default'}`; // Se for kit, usa 'default'
+                if (corSelecionada) {
+                    window.location.href = `descricaoBaby/descricaoBabyDesMasc.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
@@ -371,6 +365,24 @@
 
 
         });
+
+        document.querySelectorAll('.cores-verde-offwhite div, .cores-branca-cinza div, .cores-azul-marinho div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(cor => {
+            cor.addEventListener('click', function () {
+                // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
+                document.querySelectorAll('.cores-verde-offwhite div, .cores-branca-cinza div, .cores-azul-marinho div, .cores-marrom-azul div, .cores-vermelho-amarelo div, .cores-azulTurquesa-cinza div').forEach(c => {
+                    c.classList.remove('selected');
+                });
+
+                // Adiciona a borda na cor selecionada
+                this.classList.add('selected');
+                console.log('Classe "selected" adicionada a:', this); // Verifique se o elemento correto está sendo selecionado
+            });
+        });
+
+
+
+
+
 
 
 
