--- a/descricaoBaby/descricaoBabyDesMasc.html
+++ b/descricaoBaby/descricaoBabyDesMasc.html
@@ -39,13 +39,13 @@
             <div class="TodasInformacoes">
                 <div class="informacoes">
                     <h2 id="titulo"></h2>
-                    <p id="codigo"></p>    <!-- Código: 4631 -->
+                    <p id="codigo"></p>  
                 </div>
             
                 <div class="linhaDescricaoDoProduto"></div>
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco"></h3>
-                    <h3 class="numeracao"></h3>
+                    <h3 class="numeracao" id="numeracao"></h3>
                     <button class="btn-shopee"> Compre na Shopee <i class="fas fa-store"></i></button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
@@ -239,8 +239,9 @@
                         document.getElementById('codigo').textContent = meia.codigo || '';
                         document.getElementById('preco').textContent = meia.preco || '';
                         document.getElementById('titulo').textContent = meia.titulo || '';
+                        document.getElementById('numeracao').textContent = meia.numeracao || '';
 
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco}. Referência: ${meia.codigo || 'não informado'}.`;
+                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
