--- a/CanoLongoFem.html
+++ b/CanoLongoFem.html
@@ -32,19 +32,17 @@
         <section id="meiasCanoCurto">
             <h1 class="titulo">Casual Feminina Cano Longo </h1>
             <div class="todas-as-meias-feminina-cano-curto">
-                <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-Preta.png" alt=""></div>
+                <div class="Quadrado-da-meia-abelha-cano-longo" id="div-meia-cano-curto">
+                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Abelha.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Abelha</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="preta"></div>
-                            <div class="branca"></div>
-                            <div class="cinza"></div>
+                        <div class="cor-da-meia-abelha">
+                            <div class="abelha"><img src="img-feminino/CorDaMeiaCanoLongo-Abelha.png" alt=""></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$4,70</h3>
+                        <h3 class="preco">R$: 7,20 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -52,40 +50,60 @@
 
 
 
-                <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"><img class="le" src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
+                <div class="Quadrado-da-meia-cacto-cano-longo" id="div-meia-cano-curto">
+                    <!-- Quadrado-do-kit-cinza-cano-curto -->
+                    <div class="container"><img class="le" src="img-feminino/MeiaCanoLongoCasual-Cacto.png" alt="">
+                    </div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa Kit 3 Pares</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Cacto</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="pretaKit"></div>
-                            <div class="brancaKit"></div>
-                            <div class="cinzaKit"></div>
-                            <div class="tresCoresKit"></div>
+                        <div class="cor-da-meia-cacto">
+                            <div class="cacto"><img src="img-feminino/CorDaMeiaCanoLongo-Cacto.png" alt=""></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="preco">R$ 7,20</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-caveira-cano-longo" id="div-meia-cano-curto">
+                    <!-- Quadrado-do-kit-cinza-cano-curto -->
+
+                    <div class="container"><img class="le" src="img-feminino/MeiaCanoLongoCasual-Caveira.png" alt="">
+                    </div>
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Caveirinhas</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cor-da-meia-caveira">
+                            <div class="caveira"><img src="img-feminino/CorDaMeiaCanoLongo-Caveira.png" alt=""></div>
+
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 7,20</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
 
-                <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"><img class="le" src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
+
+                <div class="Quadrado-da-meia-melancia-cano-longo" id="div-meia-cano-curto">
+                    <!-- Quadrado-da-meia-verde-cano-curto -->
+                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Meancia.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa Kit 3 Pares</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Melancia</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="pretaKit"></div>
-                            <div class="brancaKit"></div>
-                            <div class="cinzaKit"></div>
-                            <div class="tresCoresKit"></div>
+                        <div class="cor-da-meia-melancia">
+                            <div class="melancia"><img src="img-feminino/CorDaMeiaCanoLongo-Melancia.png" alt=""></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="preco">R$ 7,20</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -93,15 +111,16 @@
 
 
 
-                <div class="Quadrado-da-meia-verde-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaVerdeMusgo.png" alt=""></div>
+
+                <div class="Quadrado-da-meia-vaquinha-cano-longo" id="div-meia-cano-curto">
+                    <!-- Quadrado-da-meia-BrancaRosa-cano-curto -->
+                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Vaquinha.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Malhada</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-verdeEscuro-verdeClaro-cinza">
-                            <div class="verdeClaro"></div>
-                            <div class="verdeMusgo"></div>
-                            <div class="CinzaBranca"></div>
+                        <div class="cor-da-meia-vaquinha">
+                            <div class="vaquinha"><img src="img-feminino/CorDaMeiaCanoLongo-Vaquinha.png" alt=""></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -113,47 +132,26 @@
 
 
 
-                    <div class="todas-as-meias-feminina-cano-curto">
-                        <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
-                            <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaRosa.png" alt=""></div>
-                            <div class="informacoes-meia-cano-curto-feminino">
-                                <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
-                                <h3 class="numeracao"> 34 á 38</h3>
-                                <div class="cores-rosa-verde">
-                                    <div class="verdeAgua"></div>
-                                    <div class="rosa"></div>
-                                </div>
-                            </div>
-                            <div class="preco-informacoes">
-                                <h3 class="preco">R$4,80</h3>
-                                <h3 class="texto-a-vista">Á Vista</h3>
-                                <button class="botao-euQuero">Eu Quero!</button>
-                            </div>
+
+
+                <div class="Quadrado-da-meia-arcoIris-cano-longo" id="div-meia-cano-curto">
+                    <!-- Quadrado-da-meia-pretaRosa-cano-curto -->
+                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-ArcoIris.png" alt=""></div>
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Arco-Iris</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cor-da-meia-arcoIris">
+                            <div class="ArcoIris"><img src="img-feminino/CorDaMeiaCanoLongo-ArcoIris.png" alt=""></div>
+
                         </div>
-
-
-
-
-
-                        <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
-                            <div class="container"> <img src="img-feminino/MeiaCanoCurto-PretaRosa.png" alt=""></div>
-                            <div class="informacoes-meia-cano-curto-feminino">
-                                <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
-                                <h3 class="numeracao"> 34 á 38</h3>
-                                <div class="cores-roxo-pretaRosa">
-                                    <div class="roxo"></div>
-                                    <div class="pretaRosa"></div>
-
-                                </div>
-                            </div>
-                            <div class="preco-informacoes">
-                                <h3 class="preco">R$4,80</h3>
-                                <h3 class="texto-a-vista">Á Vista</h3>
-                                <button class="botao-euQuero">Eu Quero!</button>
-                            </div>
-                        </div>
-
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$4,80</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
                 </div>
+            </div>
         </section>
     </main>
 
@@ -239,35 +237,38 @@
 
 
     <script>
+
+
+
+
+
+
+
+
+
+
+
         const imagensPorCor = {
-            'Quadrado-da-meia-preta-cano-curto': {
-                preta: 'img-feminino/MeiaCanoCurto-Preta.png',
-                branca: 'img-feminino/MeiaCanoCurto-Branca.png',
-                cinza: 'img-feminino/MeiaCanoCurto-Cinza.png'
+            'Quadrado-da-meia-abelha-cano-longo ': {
+                abelha: 'img-feminino/MeiaCanoLongoCasual-Abelha.png',
+
             },
-            'Quadrado-do-kit-cinza-cano-curto': {
-                pretaKit: 'img-feminino/CanoCurto-3-Preta.png',
-                brancaKit: 'img-feminino/CanoCurto-3-Branca.png',
-                cinzaKit: 'img-feminino/CanoCurto-3-Cinza.png',
-                tresCoresKit: 'img-feminino/CanoCurto-3-PretaCinzaBranca.png'
+            'Quadrado-da-meia-cacto-cano-longo ': {
+                cacto: 'img-feminino/MeiaCanoLongoCasual-Cacto.png',
+
             },
-            'Quadrado-da-meia-verde-cano-curto': {
-                verdeClaro: 'img-feminino/MeiaCanoCurto-BrancaVerdeClaro.png',
-                verdeMusgo: 'img-feminino/MeiaCanoCurto-BrancaVerdeMusgo.png',
-                CinzaBranca: 'img-feminino/MeiaCanoCurto-BrancaCinza.png'
+            'Quadrado-da-meia-caveira-cano-longo ': {
+                caveira: 'img-feminino/MeiaCanoLongoCasual-Caveira.png',
             },
-            'Quadrado-do-kit-preta-cinza-branco-cano-curto': {
-                preta: 'img-feminino/CanoCurto-3-Preta.png',
-                cinza: 'img-feminino/CanoCurto-3-Cinza.png',
-                branca: 'img-feminino/CanoCurto-3-Branca.png'
+            'Quadrado-da-meia-melancia-cano-longo': {
+                melancia: 'img-feminino/MeiaCanoLongoCasual-Melancia.png',
             },
-            'Quadrado-da-meia-BrancaRosa-cano-curto': {
-                verdeAgua: 'img-feminino/MeiaCanoCurto-BrancaVerdeAgua.png',
-                rosa: 'img-feminino/MeiaCanoCurto-BrancaRosa.png'
+            'Quadrado-da-meia-vaquinha-cano-longo': {
+                vaquinha: 'img-feminino/MeiaCanoLongoCasual-Vaquinha.png',
             },
-            'Quadrado-da-meia-pretaRosa-cano-curto': {
-                pretaRosa: 'img-feminino/MeiaCanoCurto-PretaRosa.png',
-                roxo: 'img-feminino/MeiaCanoCurto-BrancaRoxo.png'
+            'Quadrado-da-meia-arcoIris-cano-longo': {
+                ArcoIris: 'img-feminino/MeiaCanoLongoCasual-ArcoIris.png',
+
             }
         };
 
@@ -277,7 +278,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.preta, .tresCoresKit, .branca, .cinza, .pretaKit, .brancaKit, .cinzaKit, .verdeClaro, .verdeMusgo, .CinzaBranca, .verdeAgua, .rosa, .roxo, .pretaRosa');
+            const cores = quadrado.querySelectorAll('.abelha, .melancia, .caveira, .vaquinha, .cacto, .ArcoIris');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -317,22 +318,21 @@
             // Evento para o botão "Eu Quero!" dentro do quadrado atual
             quadrado.querySelector('.botao-euQuero').addEventListener('click', () => {
                 const corSelecionada = selectedColor;
-                const isKit = quadrado.classList.contains('kit'); // Verifica se é um kit
 
-                if (isKit || corSelecionada) {
-                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada || 'default'}`; // Se for kit, usa 'default'
+                if (corSelecionada) {
+                    window.location.href = `descricaoFeminina/CanoLongo.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
             });
 
         });
-      
 
-        document.querySelectorAll('.cores-branca-preto-cinza div, .cores-rosa-verde div, .cores-verdeEscuro-verdeClaro-cinza div,.cores-roxo-pretaRosa div').forEach(cor => {
+
+        document.querySelectorAll('.cor-da-meia-caveira, .cor-da-meia-abelha , .cor-da-meia-ArcoIri, .cor-da-meia-cacto, .cor-da-meia-vaquinha, .cor-da-meiamelancia div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-preto-cinza div, .cores-rosa-verde div, .cores-verdeEscuro-verdeClaro-cinza div,.cores-roxo-pretaRosa div').forEach(c => {
+                document.querySelectorAll('.cor-da-meia-caveira, .cor-da-meia-abelha ,.cor-da-meia-ArcoIri, .cor-da-meia-cacto , .cor-da-meia-vaquinha, .cor-da-meiamelancia div div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
